# Feature-Detection

./: .gitignore  CMakeLists.txt  README.md  main.cpp
header/: CornerDetector.h  EdgeDetector.h  FeatureDetector.h  Filter.h  Filterer.h  lib.h
src/: CornerDetector.cpp  EdgeDetector.cpp  FeatureDetector.cpp  Filter.cpp  lib.cpp
